fixes #96 color contrast, except input fields!

--- a/hourglass_site/static/hourglass_site/style/index.css
+++ b/hourglass_site/static/hourglass_site/style/index.css
@@ -84,7 +84,7 @@ input.price {
 }
 
 span.dollars {
-  color: #999;
+  color: #6E6E6E;
 }
 
 section.filters {
